# SimpleLogger

./: .gitignore  CMakeLists.txt  README.md
source/: simple_logger.h
tests/: CMakeLists.txt  test_directly.cpp
